zarf/k8s/sample-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample
  namespace: default
  labels:
    app: sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample
  template:
    metadata:
      labels:
        app: sample
      annotations:
        nx: |-
          - name: sample
            localPort: "8081"
            localAddr: sample
            auto: true
            direction: F

    spec:
      containers:
        - name: sample
          image: digitalcircle/sample-service:arm64
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
