zarf/k8s/sample-revservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-rev
  namespace: netmux
  labels:
    app: netmux
  annotations:
    nx: |-
      - localPort: "8082"
        name: sample-rev
        direction: R
        auto: false
        localAddr: 127.0.0.1
spec:
  ports:
    - port: 9090
  selector:
    app: netmux
