zarf/k8s/testsvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: netmux-sample
  namespace: netmux
spec:
  ports:
    - port: 8080
      name: netmux
      protocol: TCP
  selector:
    app: netmux
